1124: Fix spacing

--- a/web/profiles/custom/os2loop/themes/os2loop_theme/assets/app.scss
+++ b/web/profiles/custom/os2loop/themes/os2loop_theme/assets/app.scss
@@ -60,6 +60,10 @@ img {
 	height: auto;
 }
 
+.paragraph {
+	margin-bottom: $spacer * 2;
+}
+
 // redesign using boostrap overriding and a component-based approach
 @import "bootstrap-custom/bootstrap-custom-index.scss";
 @import "components/components-index.scss";
